--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://shijiapeng03.github.io/ShijiaPeng03"
+url: "https://shijiapeng03.github.io"
 
 github:
   username: ShijiaPeng03 # change to your github username
